--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ charset-normalizer==3.4.4
 Django==5.2.7
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
+djangorestframework-simplejwt==5.5.1
+PyJWT==2.10.1
 idna==3.11
 pillow==12.0.0
 psycopg2-binary==2.9.11
